--- a/index.html
+++ b/index.html
@@ -4,15 +4,45 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta charset="UTF-8">
 	<title>Ade Yahya</title>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="page-header">
-			<h1>Ade Yahya Prasetyo</h1>
-		</div>
+	<div class="container-custom">
+		<header>
+			<div class="row">
+				<div class="col-md-4" align="center">
+					<img src="assets/images/ade.jpg" alt="ade yahya prasetyo" class="profile-pict">
+				</div>
+				<div class="col-md-8">
+					<div class="profile-desc">
+						<h1>ade yahya prasetyo</h1>
+						<p>Web Developer | Photographer | Writter | Muslim</p>
+					</div>
+				</div>
+			</div>
+		</header>
+		<nav class=" navbar navbar-default">
+			<div class="navbar-header">
+				<button class="toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="" class="navbar-brand">Home</a>
+			</div>
+
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="">Link</a></li>
+					<li><a href="">Link</a></li>
+					<li><a href="">Link</a></li>
+				</ul>
+			</div>
+		</nav>
 	</div>
 </body>
 </html>
