penambahan content kenalan

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 				</ul>
 			</div>
 		</nav>
+
+		<article>
+			<h2>Kenalan yuk</h2>
+			<div class="body">
+				<p>Nama saya adalah ade yahya prasetyo</p>
+			</div>
+		</article>
 	</div>
 </body>
 </html>
