--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="col-md-8">
 					<div class="profile-desc">
-						<h1>ade yahya prasetyo</h1>
+						<h1>Ade Yahya Prasetyo</h1>
 						<p>Web Developer | Photographer | Writter | Muslim</p>
 					</div>
 				</div>
