Add jquery effect scroll up

--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
 	</div>
 </footer>
 
+
+<div class="keAtas">
+	<button class="btn btn-default">
+		TOP
+	</button>
+</div>
+
 </body>
 </html>
 
