--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		    overflow: auto;
 		}
 		.papan-baca {
-		    background: url('bg-white') no-repeat center center;
+		    background: url('bg-white.png') no-repeat center center;
 		    background-size: cover;
 		    -webkit-background-size: cover;
 		    -moz-background-size: cover;
