--- a/index.html
+++ b/index.html
@@ -2,11 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>YEOS Demo</title>
 	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="lib/animate.css/animate.min.css">
 	<script src="lib/jquery/dist/jquery.min.js"></script>
 	<style>
+		.balon-yeos-1,.balon-yeos-2,.balon-yeos-3{
+			position:fixed;
+			max-width: 100px;
+		}
+		.balon-yeos-3 {
+		    top: 200px;
+		    max-width: 90px;
+		    left: 100px;
+		}
+		.balon-yeos-2 {
+		    top: 150px;
+		    max-width: 100px;
+		    right: 100px;
+		}
+		.balon-yeos-1 {
+		    top: 290px;
+		    max-width: 100px;
+		    right: 2 goyang50px;
+		}
 		.btn-super-lg{
 			padding: 10px 60px;
 			font-size: 25px;
@@ -36,6 +55,13 @@
 		    width: 630px;
 		    margin: 0 auto;
 		    margin-top: 150px;
+		}
+		.goyang{
+			-webkit-animation: goyang 1.5s linear infinite;
+			-moz-animation: goyang 1.5s linear infinite;
+			-o-animation: goyang 1.5s linear infinite;
+			-ms-animation: goyang 1.5s linear infinite;
+			animation: goyang 1.5s linear infinite;
 		}
 		body{
 			background: url('landmark.png') fixed;
@@ -107,6 +133,17 @@
 			50%{top:100px;}
 			100%{top:80px;}
 		}
+		@-webkit-keyframes goyang{
+			0%{
+				-webkit-transform: rotate(-20deg);
+			}
+			50%{
+				-webkit-transform: rotate(20deg);
+			}
+			100%{
+				-webkit-transform: rotate(-20deg);
+			}
+		}
 		img.awan-kecil {
 		    position: fixed;
 		    width: 90px;
@@ -146,7 +183,46 @@
 		 
 		::-webkit-scrollbar-thumb {
 		    border-radius: 10px;
-		    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		    -moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		}
+		::-moz-scrollbar {
+		    width: 10px;
+		}
+		 
+		::-moz-scrollbar-track {
+		    -moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		    border-radius: 10px;
+		}
+		 
+		::-moz-scrollbar-thumb {
+		    border-radius: 10px;
+		    -moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		}
+		::-o-scrollbar {
+		    width: 10px;
+		}
+		 
+		::-o-scrollbar-track {
+		    -o-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		    border-radius: 10px;
+		}
+		 
+		::-o-scrollbar-thumb {
+		    border-radius: 10px;
+		    -o-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		}
+		::-ms-scrollbar {
+		    width: 10px;
+		}
+		 
+		::-ms-scrollbar-track {
+		    -ms-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		    border-radius: 10px;
+		}
+		 
+		::-ms-scrollbar-thumb {
+		    border-radius: 10px;
+		    -ms-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 		}
 	</style>
 	<script>
@@ -158,6 +234,9 @@
 <body>
 	<img src="awan.png" class="awan-kecil awan-1">
 	<img src="awan.png" class="awan-kecil awan-2">
+	<img src="balon-yeos.png" class="balon-yeos-1 goyang" alt="yeos">
+	<img src="balon-yeos.png" class="balon-yeos-2 goyang" alt="yeos">
+	<img src="balon-yeos.png" class="balon-yeos-3 goyang" alt="yeos">
 
 	<div class="container">
 		<div class="row">
