--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		 
 		::-webkit-scrollbar-thumb {
 		    border-radius: 10px;
-		    -moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 		}
 		::-moz-scrollbar {
 		    width: 10px;
