Fix css animation on firefox

--- a/index.html
+++ b/index.html
@@ -144,6 +144,39 @@
 				-webkit-transform: rotate(-20deg);
 			}
 		}
+		@-moz-keyframes goyang{
+			0%{
+				-moz-transform: rotate(-20deg);
+			}
+			50%{
+				-moz-transform: rotate(20deg);
+			}
+			100%{
+				-moz-transform: rotate(-20deg);
+			}
+		}
+		@-o-keyframes goyang{
+			0%{
+				-o-transform: rotate(-20deg);
+			}
+			50%{
+				-o-transform: rotate(20deg);
+			}
+			100%{
+				-o-transform: rotate(-20deg);
+			}
+		}
+		keyframes goyang{
+			0%{
+				-webkit-transform: rotate(-20deg);
+			}
+			50%{
+				-webkit-transform: rotate(20deg);
+			}
+			100%{
+				-webkit-transform: rotate(-20deg);
+			}
+		}
 		img.awan-kecil {
 		    position: fixed;
 		    width: 90px;
