--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
 				</div>
 			</div>
 		</header>
+
+		<!-- <section class="content">
+			<div class="container">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur placeat animi odit hic voluptatum molestias reiciendis accusantium ratione molestiae aliquid dolor deserunt possimus, quae officiis error commodi. Doloremque, maiores, suscipit.
+				</p>
+
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere fugit et consequatur reprehenderit sunt maiores temporibus nisi, atque sed placeat ea inventore qui impedit corporis voluptatem numquam. Accusamus, repellat molestiae.
+				</p>
+			</div>
+		</section> -->
 		
 		<script src="js/TweenLite.min.js"></script>
 		<script src="js/EasePack.min.js"></script>
