--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>I'm a Ninja</title>
 		<meta name="description" content="I Just UI / UX Designer, Front-End Developer and Trouble Maker, Living on the Surabaya - Indonesia. Before you hire me, i have to tell you that i have no degree. I Love to learn anything from everywhere especially about Technology." />
-		<meta name="keywords" content="Designer, Front-End Developer, Freelance, Coder, Ninja, Surabaya, Indonesia" />
+		<meta name="keywords" content="Ade Yahya Prasetyo, Designer, Front-End Developer, Freelance, Coder, Ninja, Surabaya, Indonesia" />
 		<meta name="author" content="Ade Yahya Prasetyo" />
 		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" type="text/css" href="css/homepage.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,10 +28,12 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center">
 						<img src="img/ade-yahya-prasetyo.jpg" alt="Ade Yahya Prasetyo" class="img-circle avatar">
-						<h1>
+						<br><br>
+						<h1 id="head1" class="hide">
 							~Hi <span>I'm Adeh!</span>
 						</h1>
-						<p class="lead">
+						<br><br>
+						<p class="lead desc">
 							<strong>UI / UX Designer, Front-End Developer</strong> and <strong>Trouble Maker</strong> <i class="fa fa-exclamation-circle"></i>
 							<br>
 							Living on the <strong>Surabaya - Indonesia.</strong>
@@ -88,7 +91,7 @@
 				</p>
 			</div>
 		</section> -->
-		
+		<script src="lib/jquery/dist/jquery.min.js"></script>
 		<script src="js/TweenLite.min.js"></script>
 		<script src="js/EasePack.min.js"></script>
 		<script src="js/rAF.js"></script>
