--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="Ade Yahya Prasetyo" />
 		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="css/animate-minify.css">
 		<link rel="stylesheet" type="text/css" href="css/homepage.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -79,22 +79,10 @@
 				</div>
 			</div>
 		</header>
-
-		<!-- <section class="content">
-			<div class="container">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur placeat animi odit hic voluptatum molestias reiciendis accusantium ratione molestiae aliquid dolor deserunt possimus, quae officiis error commodi. Doloremque, maiores, suscipit.
-				</p>
-
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere fugit et consequatur reprehenderit sunt maiores temporibus nisi, atque sed placeat ea inventore qui impedit corporis voluptatem numquam. Accusamus, repellat molestiae.
-				</p>
-			</div>
-		</section> -->
 		<script src="lib/jquery/dist/jquery.min.js"></script>
 		<script src="js/TweenLite.min.js"></script>
 		<script src="js/EasePack.min.js"></script>
 		<script src="js/rAF.js"></script>
-		<script src="js/demo-1.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
