--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
 										<i class="fa fa-twitter"></i>
 									</a>
 								</li>
-								
+
+								<li>
+									<a href="http://facebook.com/hadeeeh" target="_blank">
+										<i class="fa fa-facebook"></i>
+									</a>
+								</li>
+
 								<li>
 									<a href="http://github.com/adeyahya" target="_blank">
 										<i class="fa fa-github"></i>
@@ -57,7 +63,7 @@
 								</li>
 
 								<li>
-									<a href="http://medium.com/adehuyeah" target="_blank">
+									<a href="http://medium.com/@adehuyeah" target="_blank">
 										<i class="fa fa-medium"></i>
 									</a>
 								</li>
