--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<link rel="apple-itouch-icon" href="http://adeyahya.github.io/img/favicon.png">
+		<link rel="icon" 
+			type="image/png" 
+			href="http://adeyahya.github.io/img/favicon.png">
 		<title>I'm a Ninja</title>
 		<meta name="description" content="I Just UI / UX Designer, Front-End Developer and Trouble Maker, Living on the Surabaya - Indonesia. Before you hire me, i have to tell you that i have no degree. I Love to learn anything from everywhere especially about Technology." />
 		<meta name="keywords" content="Ade Yahya Prasetyo, Designer, Front-End Developer, Freelance, Coder, Ninja, Surabaya, Indonesia" />
 		<meta name="author" content="Ade Yahya Prasetyo" />
+		
+		<meta content="http://adeyahya.github.io/img/ade-yahya-prasetyo.jpg" property="og:image" />
+		<meta content="I'm a Ninja | adeh!" property="og:title" />
+		<meta content="ade yahya prasetyo" property="og:site_name" />
+		<meta content="http://adeyahya.github.io" property="og:url" />
+
 		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/animate-minify.css">
