Typo and cross browser css issue

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
 									<div class="col-md-4">
 										<img src="img/hipster.png" alt="Hipster" class="img-responsive">
 										<header>
-											<h3>I Just a hipster.</h3>
+											<h3>I'm Just a hipster.</h3>
 										</header>
 									</div>
 									<div class="col-md-8">
 										<p>
-											I never learned the theory of design in any school, I just learn design through what I have seen and I experienced when it.
+											I never learned the theory of design in any school, I just learn design through what I have seen and I experienced with it.
 										</p>
 										<p>
 											I also UX enthusiast, I like to challenge myself to create design that can communicate and take human love like a poetry.
@@ -173,7 +173,7 @@
 									<h3>Adobe Illustrator</h3>
 								</header>
 								<p>
-									Vector is best tool to illustrate the type of image icons and logo, I use Adobe Illustrator to create the logo, icon, and beloved svg.
+									Vector is best type to illustrate the type of image icons and logo, I use Adobe Illustrator to create the logo, icon, and beloved svg.
 								</p>
 							</section>
 						</article>
