--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 									<h3>Adobe Illustrator</h3>
 								</header>
 								<p>
-									Vector is best type to illustrate the type of image icons and logo, I use Adobe Illustrator to create the logo, icon, and beloved svg.
+									Vector is the best type to illustrate the type of image icons and logo, I use Adobe Illustrator to create the logo, icon, and beloved svg.
 								</p>
 							</section>
 						</article>
