--- a/index.html
+++ b/index.html
@@ -18,32 +18,12 @@
 		<meta content="ade yahya prasetyo" property="og:site_name" />
 		<meta content="http://adeyahya.github.io" property="og:url" />
 
-		<link rel="stylesheet" type="text/css" href="css/app.css" />
+		<link rel="stylesheet" type="text/css" href="//adeyahya.github.io/css/app.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	</head>
 	<body>
-<!-- 		<nav class="fixed-nav visible-lg visible-md visible-sm">
-			<ul class="subMenu">
-				<li>
-					<a href="#design">
-						<i class="fa fa-paint-brush"></i> <span>Design</span>
-					</a>
-				</li>
-				<li>
-					<a href="#coding">
-						<i class="fa fa-terminal"></i> <span>Coding</span>
-					</a>
-				</li>
-				<li>
-					<a href="#team">
-						<i class="fa fa-paint-brush"></i> <span>Teamworks</span>
-					</a>
-				</li>
-			</ul>
-		</nav> -->
-
 		<div class="site-head">
 			<div id="large-header" class="large-header">
 				<canvas id="demo-canvas"></canvas>
@@ -268,19 +248,7 @@
 				</div>
 			</div>
 		</section>
-		<script src="lib/jquery/dist/jquery.min.js"></script>
-		<script src="js/app.js"></script>
-		<script>
-			$(document).ready(function(){
-				$('ul.subMenu').onePageNav({
-					currentClass: 'current',
-				    changeHash: false,
-				    scrollSpeed: 750,
-				    scrollThreshold: 0.5,
-				    filter: '',
-				    easing: 'swing',
-				});
-			})
-		</script>
+		<script src="//adeyahya.github.io/lib/jquery/dist/jquery.min.js"></script>
+		<script src="//adeyahya.github.io/js/app.js"></script>
 	</body>
 </html>
