--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta content="ade yahya prasetyo" property="og:site_name" />
 		<meta content="http://adeyahya.github.io" property="og:url" />
 
-		<link rel="stylesheet" type="text/css" href="//adeyahya.github.io/css/app.css" />
+		<link rel="stylesheet" href="http://adeyahya.github.io/css/app.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -248,7 +248,7 @@
 				</div>
 			</div>
 		</section>
-		<script src="//adeyahya.github.io/lib/jquery/dist/jquery.min.js"></script>
-		<script src="//adeyahya.github.io/js/app.js"></script>
+		<script src="http://adeyahya.github.io/lib/jquery/dist/jquery.min.js"></script>
+		<script src="http://adeyahya.github.io/js/app.js"></script>
 	</body>
 </html>
