--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta content="ade yahya prasetyo" property="og:site_name" />
 		<meta content="http://adeyahya.github.io" property="og:url" />
 
-		<link rel="stylesheet" href="https://cdn.rawgit.com/adeyahya/adeyahya.github.io/master/css/app.css" />
+		<link rel="stylesheet" href="css/app.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -249,6 +249,6 @@
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="https://cdn.rawgit.com/adeyahya/adeyahya.github.io/master/js/app.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
