--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center">
-						<img src="img/ade-yahya-prasetyo.jpg" alt="Ade Yahya Prasetyo" class="img-circle avatar">
+						<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/ade-yahya-prasetyo_obhrl2.jpg" alt="Ade Yahya Prasetyo" class="img-circle avatar">
 						<br><br>
 						<h1 id="head1" class="hide">
 							~Hi <span>I'm Adeh!</span>
@@ -94,7 +94,7 @@
 							<section class="reading">
 								<div class="row">
 									<div class="col-md-4">
-										<img src="img/hipster.png" alt="Hipster" class="img-responsive">
+										<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901486/hipster_xnvwre.png" alt="Hipster" class="img-responsive">
 										<header>
 											<h3>I'm Just a hipster.</h3>
 										</header>
@@ -111,7 +111,7 @@
 							</section>
 
 							<section class="reading">
-								<img src="img/photoshop.png" alt="adobe photoshop" class="pull-right img-responsive">
+								<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/photoshop_vad89j.png" alt="adobe photoshop" class="pull-right img-responsive">
 								<header>
 									<h3>Adobe Photoshop</h3>
 								</header>
