Change image to cdn

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="apple-itouch-icon" href="http://adeyahya.github.io/img/favicon.png">
+		<link rel="apple-itouch-icon" href="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901486/favicon_wftiqy.png">
 		<link rel="icon"
 			type="image/png"
-			href="http://adeyahya.github.io/img/favicon.png">
+			href="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901486/favicon_wftiqy.png">
 		<title>I'm a Ninja</title>
 		<meta name="description" content="I Just UI / UX Designer, Front-End Developer and Trouble Maker, Living on the Surabaya - Indonesia. Before you hire me, i have to tell you that i have no degree. I Love to learn anything from everywhere especially about Technology." />
 		<meta name="keywords" content="Ade Yahya Prasetyo, Designer, Front-End Developer, Freelance, Coder, Ninja, Surabaya, Indonesia" />
@@ -124,7 +124,7 @@
 							</section>
 
 							<section class="reading">
-								<img src="img/illustrator.png" alt="adobe illustrator" class="pull-left img-responsive">
+								<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/illustrator_llscr4.png" alt="adobe illustrator" class="pull-left img-responsive">
 
 								<header>
 									<h3>Adobe Illustrator</h3>
@@ -155,49 +155,49 @@
 				<section class="reading">
 					<div class="row">
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/angular.png" alt="angularjs" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/angular_ac2gka.png" alt="angularjs" class="img-responsive">
 						</div>
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/coffee.png" alt="coffeescript" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901486/coffee_m5ohqz.png" alt="coffeescript" class="img-responsive">
 						</div>
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/bootstrap.png" alt="bootstrap" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/bootstrap_ujsdto.png" alt="bootstrap" class="img-responsive">
 						</div>
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/node.png" alt="nodejs" class="img-responsive">
-						</div>
-
-						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/bower.png" alt="bower" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/node_byapl1.png" alt="nodejs" class="img-responsive">
 						</div>
 
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/gulp.png" alt="gulp" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/bower_oqro12.png" alt="bower" class="img-responsive">
 						</div>
 
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/sass.png" alt="sass" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901486/gulp_plt6xs.png" alt="gulp" class="img-responsive">
 						</div>
 
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/chrome.png" alt="google chrome" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/sass_t3pibc.png" alt="sass" class="img-responsive">
 						</div>
 
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/mdn.png" alt="Mozilla Developer Network" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/chrome_uslzmx.png" alt="google chrome" class="img-responsive">
 						</div>
 
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/github.png" alt="Github" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/mdn_hz3u8a.png" alt="Mozilla Developer Network" class="img-responsive">
+						</div>
+
+						<div class="col-md-2 col-sm-3 col-xs-6">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/github_p9bif1.png" alt="Github" class="img-responsive">
 						</div>
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/atom.png" alt="atom" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/atom_p4toa6.png" alt="atom" class="img-responsive">
 						</div>
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/npm.png" alt="npm" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/npm_v1j7gv.png" alt="npm" class="img-responsive">
 						</div>
 						<div class="col-md-2 col-sm-3 col-xs-6">
-							<img src="img/jquery.png" alt="jquery" class="img-responsive">
+							<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901487/jquery_bob3gx.png" alt="jquery" class="img-responsive">
 						</div>
 					</div>
 				</section>
