Full optimize cdn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta content="ade yahya prasetyo" property="og:site_name" />
 		<meta content="http://adeyahya.github.io" property="og:url" />
 
-		<link rel="stylesheet" href="css/app.css" />
+		<link rel="stylesheet" href="//googledrive.com/host/0B2IOGsyT74t5by0tWWRxaWR4UFk/app.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -218,7 +218,7 @@
 						<section class="reading">
 							<div class="row">
 								<div class="col-md-6 people">
-									<img src="img/arryangga.jpg" alt="" class="thumb img-responsive">
+									<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/arryangga_hvavpm.jpg" alt="" class="thumb img-responsive">
 									<div class="inside">
 										<header>
 											<h3>Arryangga Pratama Putra</h3>
@@ -231,7 +231,7 @@
 								</div>
 
 								<div class="col-md-6 people">
-									<img src="img/rio.jpg" alt="" class="thumb img-responsive">
+									<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901488/rio_lcrm5i.jpg" alt="" class="thumb img-responsive">
 									<div class="inside">
 										<header>
 											<h3>Rio Rizky R. F., S. Kom</h3>
@@ -249,6 +249,6 @@
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="js/app.js"></script>
+		<script src="//googledrive.com/host/0B2IOGsyT74t5by0tWWRxaWR4UFk/app.js"></script>
 	</body>
 </html>
