--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta content="ade yahya prasetyo" property="og:site_name" />
 		<meta content="http://adeyahya.github.io" property="og:url" />
 
-		<link rel="stylesheet" href="//googledrive.com/host/0B2IOGsyT74t5by0tWWRxaWR4UFk/app.css" />
+		<link rel="stylesheet" href="css/app.css" />
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -248,7 +248,7 @@
 				</div>
 			</div>
 		</section>
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="//googledrive.com/host/0B2IOGsyT74t5by0tWWRxaWR4UFk/app.js"></script>
+		<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
