--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
 						<section class="reading">
 							<div class="row">
-								<div class="col-md-6 people">
+								<div class="col-xs-6 people">
 									<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442901485/arryangga_hvavpm.jpg" alt="" class="thumb img-responsive">
 									<div class="inside">
 										<header>
@@ -230,7 +230,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-6 people">
+								<div class="col-xs-6 people">
 									<img src="http://res.cloudinary.com/dt2mntbmf/image/upload/v1442905900/rio_cz0xqf.jpg" alt="" class="thumb img-responsive">
 									<div class="inside">
 										<header>
